Moved examples/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ canal.subscribe(userTweeted, function (tweet) {
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="../dist/edge/canal.min.js"></script>
+<script src="dist/edge/canal.min.js"></script>
 <script>
     var emptyEventCount = 0;
     var allTweetsCount = 0;
